调整好连接优先级的连接